--- a/rush.yaml
+++ b/rush.yaml
@@ -38855,7 +38855,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your field gains ATK equal to [the ATK of the face-up Level 8 or lower monster on your opponent's field with the lowest ATK] until the end of this turn.
+    1 face-up monster on your field gains ATK equal to [the ATK of the face-up Level 8 or lower monster with the lowest ATK on your opponent's field] until the end of this turn.
   de:
   es:
   fr:
@@ -52203,7 +52203,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal Summons or Sets a monster from their hand.
+    When your opponent Normal Summons/Sets a monster from their hand.
   de:
   es:
   fr:
@@ -70888,7 +70888,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 900 damage to your opponent. This turn, if your opponent attacks a face-up monster, they can only attack the monster on your field with the lowest Level.
+    Inflict 900 damage to your opponent. This turn, if your opponent attacks a face-up monster, they can only attack the monster with the lowest Level on your field.
   de:
   es:
   fr:
