--- a/rush.yaml
+++ b/rush.yaml
@@ -41987,7 +41987,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Ruler's Current"/"Ruler's Deadly Duel"/"Ruler's Dance" from your Graveyard in your Spell & Trap Zone.
+    Set 1 "Ruler's Current"/"Dark Ruler Battle Slash"/"Ruler's Dance" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -105519,7 +105519,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy up to 2 face-up monsters on your opponent's field, whose total ATK is less than or equal to this card's.
+    Destroy up to 2 face-up monsters on your opponent's field, whose total ATK is less than or equal to this card's ATK.
   de:
   es:
   fr:
@@ -108949,7 +108949,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the attacking monster to face-up Defense Position. If your LP are lower than or equal to your opponent's, you can also destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
+    Change the attacking monster to face-up Defense Position. If your LP are lower than or equal to your opponent's LP, you can also destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
   de:
   es:
   fr:
