--- a/data/cards/04732017.yaml
+++ b/data/cards/04732017.yaml
@@ -8,7 +8,7 @@ name:
   it: Zombie Fuso
   pt: Zumbi Fundido
   ja: <ruby>灼<rt>しゃく</rt></ruby><ruby>熱<rt>ねつ</rt></ruby>ゾンビ
-  ja_romaji: Shakunetsu Zonbī
+  ja_romaji: Shakunetsu Zonbi
   ko: 작열 좀비
   ko_rr:
   zh-TW: 灼熱殭屍
