--- a/data/rush/17973.yaml
+++ b/data/rush/17973.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send cards equal to [the number of face-up Galaxy Type monsters on your field] from the top of your Deck to the Graveyard.
+    Send cards from the top of your Deck to the Graveyard equal to [the number of face-up Galaxy Type monsters on your field].
   de:
   es:
   fr:
