--- a/rush.yaml
+++ b/rush.yaml
@@ -8597,6 +8597,9 @@ series:
 images:
 - index: 1
   image: WickedShadowDarkLurker-RDMRP1-JP-R.png
+  illustration: WickedShadowDarkLurker-DBR-JP-VG-artwork.png
+- index: 2
+  image: WickedShadowDarkLurker-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP02-JP030
@@ -62686,7 +62689,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up Level 5-8 Insect Type monster on your opponent's field. You can only attack with Insect Type monsters this turn.
+    Destroy 1 Level 5-8 face-up Insect Type monster on your opponent's field. You can only attack with Insect Type monsters this turn.
   de:
   es:
   fr:
@@ -78999,7 +79002,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Neither player can Special Summon non-FIRE Attribute monsters.
+    Each player can only Special Summon FIRE Attribute monsters.
   de:
   es:
   fr:
@@ -89887,7 +89890,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Take control of 1 face-up Level 5-8 monster on your opponent's field with the same Type as the monster sent from your hand to the Graveyard to meet the requirement (move it to your field, and use it yourself).
+    Take control of 1 Level 5-8 face-up monster on your opponent's field with the same Type as the monster sent from your hand to the Graveyard to meet the requirement (move it to your field, and use it yourself).
   de:
   es:
   fr:
@@ -104084,7 +104087,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon monsters with 0 DEF from your Graveyard equal to [the number of monsters revealed to meet the requirement] to your field in face-down Defense Position. If you do, you cannot Normal Summon Level 9 or lower monsters, or Set monsters from your hand until the end of this turn.
+    Special Summon monsters with 0 DEF from your Graveyard equal to [the number of monsters revealed to meet the requirement] to your field in face-down Defense Position. If you do, you cannot Normal Summon Level 9 or lower monsters or Set monsters from your hand until the end of this turn.
   de:
   es:
   fr:
@@ -109976,7 +109979,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. Your opponent cannot attack with Level 7 or lower monsters this turn.
+    Negate the attack. Your opponent's Level 7 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -111425,7 +111428,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send cards from the top of your Deck to the Graveyard equal to [the number of different Types on your field]. Then, if you sent 2 or more Pyro Type monsters to the Graveyard by this effect, draw 1 card.
+    Send cards from the top of your Deck to the Graveyard equal to [the number of different Types among the face-up monsters on your field]. Then, if you sent 2 or more Pyro Type monsters to the Graveyard by this effect, draw 1 card.
   de:
   es:
   fr:
@@ -113410,7 +113413,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Take 1 Level 7 EARTH Attribute Machine Type monster from your Graveyard, and either add it to your hand or Special Summon it face-up to your field. Then, if that was "Jointech Hero", you can add 1 "Jointech Ace" from your Graveyard to your hand.
+    Take 1 Level 7 EARTH Attribute Machine Type monster from your Graveyard, and either add it to your hand or Special Summon it face-up to your field. Then, if it was "Jointech Hero", you can add 1 "Jointech Ace" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -113843,7 +113846,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of different Types on the field] x 300. Also, if the equipped monster is a Maximum Monster, it cannot be destroyed by your opponent's card effects.
+    The equipped monster gains ATK equal to [the number of different Types among the face-up monsters on the field] x 300. Also, if the equipped monster is a Maximum Monster, it cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -117398,7 +117401,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. Then, you can change the battle position of the attack target. If you do, inflict damage to your opponent equal to [the number of monsters on your opponent's field] x 200.
+    Negate the attack. Then, you can change the battle position of the attack target. If you do, inflict damage to your opponent equal to [the number of monsters on their field] x 200.
   de:
   es:
   fr:
@@ -117581,7 +117584,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 500 ATK until the end of this turn, if that was "Twin Edge Dragon".
+    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 500 ATK until the end of this turn, if it was "Twin Edge Dragon".
   de:
   es:
   fr:
@@ -125376,7 +125379,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard to your hand. Then, if that was "Blue-Eyes Bright Dragon", you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
+    Add 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard to your hand. Then, if it was "Blue-Eyes Bright Dragon", you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
   de:
   es:
   fr:
