--- a/rush.yaml
+++ b/rush.yaml
@@ -6281,7 +6281,7 @@ series:
 - Signature move
 images:
 - index: 1
-  image: InfernoFireBlast-RDGRP1-JP-C.png
+  image: InfernoFireBlast-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/VJMP-JP003
@@ -6440,7 +6440,7 @@ images:
   image: DarkMagician-RDGRP1-JP-ScR.png
   illustration: DarkMagician-G002-JP-VG-artwork-2.png
 - index: 3
-  image: DarkMagician-RDHC01-JP-OP.png
+  image: DarkMagician-RDHC01-JP-ORR.png
 sets:
   ja:
   - set_number: RD/KP02-JP000
@@ -8690,7 +8690,7 @@ images:
   image: RoyalRebelsHeavyMetal-RDSBD5-JP-C.png
   illustration: RoyalRebelsHeavyMetal-DBR-JP-VG-artwork.png
 - index: 2
-  image: RoyalRebelsHeavyMetal-RDHC01-JP-OP.png
+  image: RoyalRebelsHeavyMetal-RDHC01-JP-ORR.png
   illustration: RoyalRebelsHeavyMetal-OW.png
 sets:
   ja:
@@ -22057,7 +22057,7 @@ atk: 1400
 def: 1200
 images:
 - index: 1
-  image: CelticGuardian-RDB001-JP-C.png
+  image: CelticGuardian-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/B001-JP001
@@ -22065,6 +22065,11 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RD/HC01-JP059
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: RD/EV01-KR004
     set_name: Event Pack 2021 Vol.1
@@ -22746,7 +22751,7 @@ def: 1500
 legend: true
 images:
 - index: 1
-  image: Jinzo-RDKP04-JP-RR.png
+  image: Jinzo-RDHC01-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP04-JP000
@@ -30031,7 +30036,7 @@ series:
 - Royal Rebel's
 images:
 - index: 1
-  image: RoyalRebelsDoomMetal-RDS221-JP-ScR.png
+  image: RoyalRebelsDoomMetal-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP024
@@ -30047,6 +30052,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
   ko:
   - set_number: RD/KP05-KR024
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
@@ -33856,13 +33862,18 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: RitzyKingRex-RDMAX2-JP-R.png
+  image: RitzyKingRex-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP010
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Rare
+  - set_number: RD/HC01-JP080
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/MAX2-KR010
     set_name: Maximum Ultra Evolution Pack
@@ -36223,13 +36234,18 @@ series:
 - Goblin
 images:
 - index: 1
-  image: StartupGoblin-RDMAX2-JP-SR.png
+  image: StartupGoblin-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP048
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP062
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: RD/MAX2-KR048
     set_name: Maximum Ultra Evolution Pack
@@ -37488,13 +37504,18 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: SpeedyPerformer-RDKP06-JP-SR.png
+  image: SpeedyPerformer-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP018
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP063
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: RD/KP06-KR018
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
@@ -46464,7 +46485,7 @@ atk: 1400
 def: 1300
 images:
 - index: 1
-  image: CannonSoldier-RDEXT1-JP-UR.png
+  image: CannonSoldier-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP041
@@ -46472,6 +46493,11 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
+  - set_number: RD/HC01-JP060
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: RD/EXT1-KR041
     set_name: Extra Transcend Enhancement Pack
@@ -47308,14 +47334,14 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 face-up non-Level 3 Spellcaster Type monster from the field to the owner's hand. Then, if you returned "Sevens Road Magician" to the hand by this effect, you can draw 1 card.
+    Return 1 face-up non-Level 3 Spellcaster Type monster from the field to the owner's hand. Then, if you returned a card whose original name is "Sevens Road Magician" to the hand by this effect, you can draw 1 card.
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    自分または相手フィールドの表側表示モンスター（レベル３以外／魔法使い族）１体を選んで持ち主の手札に戻す。この効果で「セブンスロード・マジシャン」を手札に戻した場合、さらに自分は１枚ドローできる。
+    自分または相手フィールドの表側表示モンスター（レベル３以外／魔法使い族）１体を選んで持ち主の手札に戻す。この効果で手札に戻したカードの元々のカード名が「セブンスロード・マジシャン」の場合、さらに自分は１枚ドローできる。
   ko: |-
     자신 또는 상대 필드의 앞면 표시 몬스터(레벨 3 이외 / 마법사족) 1장을 고르고 주인의 패로 되돌린다. 이 효과로 "세븐즈로드 매지션"을 패로 되돌렸을 경우, 추가로 자신은 1장 드로우할 수 있다.
   zh-TW:
@@ -47330,7 +47356,7 @@ series:
 - Sevens Road
 images:
 - index: 1
-  image: SevensRoadEnchanter-RDDD01-JP-ScR.png
+  image: SevensRoadEnchanter-RDHC01-JP-UR.png
 sets:
   ja:
   - set_number: RD/DD01-JP002
@@ -47400,7 +47426,7 @@ series:
 legend: true
 images:
 - index: 1
-  image: MirrorForce-RDDD01-JP-ScR.png
+  image: MirrorForce-RDHC01-JP-UR.png
 sets:
   ja:
   - set_number: RD/DD01-JP003
@@ -50028,7 +50054,7 @@ atk: 1300
 def: 300
 images:
 - index: 1
-  image: SeaDragonKnight-RDKP07-JP-UR.png
+  image: SeaDragonKnight-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP032
@@ -50043,6 +50069,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
   ko:
   - set_number: RD/KP07-KR032
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
@@ -51541,7 +51568,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: BackBeat-RDKP07-JP-UR.png
+  image: BackBeat-RDHC01-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP053
@@ -52353,13 +52380,18 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: HardefenseMission-RDKP07-JP-SR.png
+  image: HardefenseMission-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP065
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP069
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: RD/KP07-KR065
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
@@ -52816,7 +52848,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: CANMeloD-RDGRP1-JP-UR.png
+  image: CANMeloD-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/GRP1-JP010
@@ -53550,7 +53582,7 @@ series:
 - Dark Magician
 images:
 - index: 1
-  image: DarkResonanceBurst-RDGRP1-JP-SR.png
+  image: DarkResonanceBurst-RDHC01-JP-ScR.png
   illustration: DarkResonanceBurst-G002-JP-VG-artwork.png
 - index: '1.1'
   image: DarkResonanceBurst-RDGRP1-KR-SR.png
@@ -53623,7 +53655,7 @@ series:
 - Signature move
 images:
 - index: 1
-  image: BurstStreamofDestruction-RDSD0A-JP-C.png
+  image: BurstStreamofDestruction-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/GRP1-JP028
@@ -55346,7 +55378,7 @@ def: 3000
 legend: true
 images:
 - index: 1
-  image: TheCreator-RDKP08-JP-RR.png
+  image: TheCreator-RDHC01-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP08-JP000
@@ -55954,7 +55986,7 @@ series:
 - Sevens Road
 images:
 - index: 1
-  image: SevensRoadSorcerer-RDKP08-JP-SR.png
+  image: SevensRoadSorcerer-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP08-JP011
@@ -56029,7 +56061,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: RhythmicalPerformer-RDKP08-JP-SR.png
+  image: RhythmicalPerformer-RDHC01-JP-UR.png
   illustration: RhythmicalPerformer-G002-JP-VG-artwork.png
 - index: '1.1'
   image: RhythmicalPerformer-RDKP08-KR-SR.png
@@ -59292,7 +59324,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: ParallelBirthGate-RDKP08-JP-UR.png
+  image: ParallelBirthGate-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP057
@@ -61434,13 +61466,18 @@ atk: 1300
 def: 600
 images:
 - index: 1
-  image: SatellitePegasus-RDKP09-JP-UR.png
+  image: SatellitePegasus-RDHC01-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP09-JP017
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/HC01-JP047
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR017
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -61751,7 +61788,7 @@ atk: 600
 def: 0
 images:
 - index: 1
-  image: PoetFairy-RDKP09-JP-UR.png
+  image: PoetFairy-RDHC01-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP09-JP021
@@ -62873,7 +62910,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: SevensgiastheMagicalDragonKnight-RDKP09-JP-RR.png
+  image: SevensgiastheMagicalDragonKnight-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP09-JP037
@@ -63944,13 +63981,18 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieUp-RDKP09-JP-SR.png
+  image: ExcutieUp-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP052
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Super Rare
+  - set_number: RD/HC01-JP066
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR052
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -64009,7 +64051,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: GhostCyclone-RDKP09-JP-SR.png
+  image: GhostCyclone-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP09-JP053
@@ -71877,7 +71919,7 @@ series:
 - Gaia
 images:
 - index: 1
-  image: CurseofDragon-RDB222-JP-C.png
+  image: CurseofDragon-RDHC01-JP-SR.png
   illustration: CurseofDragon-G002-JP-VG-artwork.png
 - index: 2
   image: CurseofDragon-RD711C-JP-NPR.png
@@ -77413,7 +77455,7 @@ series:
 - Galactica
 images:
 - index: 1
-  image: GalacticaJamaisVu-RDSD01-JP-C.png
+  image: GalacticaJamaisVu-RDHC01-JP-UR.png
 sets:
   ja:
   - set_number: RD/SD01-JP019
@@ -77424,6 +77466,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Ultra Rare
+    - Secret Rare
   ko:
   - set_number: RD/SD01-KR019
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
@@ -78356,7 +78399,7 @@ series:
 - High Tech Dragon
 images:
 - index: 1
-  image: RedBootBoostDragon-RDSD03-JP-C.png
+  image: RedBootBoostDragon-RDHC01-JP-UR.png
   illustration: RedBootBoostDragon-G002-JP-VG-artwork.png
 - index: 2
   image: RedBootBoostDragon-RDECG1-JP-NPR.png
@@ -78374,6 +78417,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Ultra Rare
+    - Secret Rare
   ko:
   - set_number: RD/SD03-KR001
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
@@ -79430,7 +79474,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: SuperAssistantAchi-RDSD04-JP-C.png
+  image: SuperAssistantAchi-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/SD04-JP023
@@ -85305,7 +85349,7 @@ series:
 - Gaia
 images:
 - index: 1
-  image: GaiatheDragonChampion-RDB223-JP-C.png
+  image: GaiatheDragonChampion-RDHC01-JP-SR.png
   illustration: GaiatheDragonChampion-G002-JP-VG-artwork.png
 - index: 2
   image: GaiatheDragonChampion-RD711C-JP-NPR.png
@@ -85321,6 +85365,11 @@ sets:
     set_name: Yu-Gi-Oh! Card Game x 7-Eleven Collaboration Campaign
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/HC01-JP052
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/EV03-KR002
     set_name: Event Pack 2023 Vol.1
@@ -88311,7 +88360,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieProuty-RDORP1-JP-C.png
+  image: ExcutieProuty-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP037
@@ -88592,7 +88641,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieCatch-RDORP1-JP-C.png
+  image: ExcutieCatch-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP041
@@ -90918,7 +90967,7 @@ property: Normal
 legend: true
 images:
 - index: 1
-  image: MagicCylinder-RDDD02-JP-ScR.png
+  image: MagicCylinder-RDHC01-JP-UR.png
 sets:
   ja:
   - set_number: RD/DD02-JP005
@@ -92842,7 +92891,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieFlame-RDKP12-JP-SR.png
+  image: ExcutieFlame-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP12-JP019
@@ -96540,13 +96589,18 @@ series:
 - Transamu
 images:
 - index: 1
-  image: TransamuRaiker-RDSJMP-JP-NPR.png
+  image: TransamuRaiker-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/SJMP-JP024
     set_name: Saikyō Jump March 2023 promotional card
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/HC01-JP061
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: RD/EPP1-KR018
     set_name: Express Pack
@@ -96661,7 +96715,7 @@ series:
 - Shaman Bandit
 images:
 - index: 1
-  image: PlectcrimeoftheDeadlyDirge-RDSJMP-JP-NPR.png
+  image: PlectcrimeoftheDeadlyDirge-RDHC01-JP-SR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP025
@@ -96672,6 +96726,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/EPP1-KR019
     set_name: Express Pack
@@ -97205,7 +97260,9 @@ atk: 1100
 def: 300
 images:
 - index: 1
-  image: LegendMagician-RDLGP1-JP-UR.png
+  image: LegendMagician-RDHC01-JP-SR.png
+- index: 2
+  image: LegendMagician-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/LGP1-JP005
@@ -97217,6 +97274,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/LGP1-KR005
     set_name: Legend Awakening Pack
@@ -106321,7 +106379,7 @@ images:
 - index: 1
   image: CharisMagicScepterDeathWand-RDKP13-JP-R.png
 - index: 2
-  image: CharisMagicScepterDeathWand-RDHC01-JP-OP.png
+  image: CharisMagicScepterDeathWand-RDHC01-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP13-JP053
@@ -108141,7 +108199,7 @@ series:
 - Harpie
 images:
 - index: 1
-  image: HarpiesFullDress-RDTB01-JP-NPR.png
+  image: HarpiesFullDress-RDHC01-JP-SR.png
 sets:
   ja:
   - set_number: RD/TB01-JP012
@@ -108152,6 +108210,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/TB01-KR012
     set_name: 'Triple Build Pack: Godbreath Wing'
@@ -108213,7 +108272,7 @@ series:
 - Signature move
 images:
 - index: 1
-  image: TriangleEcstasySpark-RDTB01-JP-C.png
+  image: TriangleEcstasySpark-RDHC01-JP-SR.png
 sets:
   ja:
   - set_number: RD/TB01-JP013
@@ -108224,6 +108283,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/TB01-KR013
     set_name: 'Triple Build Pack: Godbreath Wing'
@@ -125580,6 +125640,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Ultra Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -125760,6 +125821,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Ultra Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -125889,7 +125951,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
-    - Secret Rare
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -125952,6 +126014,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -126010,7 +126073,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
-    - Secret Rare
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -126069,7 +126132,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
-    - Secret Rare
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -126132,6 +126195,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -126196,6 +126260,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -126536,6 +126601,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -126743,6 +126809,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -126807,6 +126874,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -126924,6 +126992,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -126982,6 +127051,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -127042,6 +127112,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -127242,6 +127313,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -127380,6 +127452,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -127585,6 +127658,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -127647,6 +127721,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -127707,6 +127782,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -127769,6 +127845,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -127919,7 +127996,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（悪魔族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -127931,7 +128009,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの魔法・罠カード１枚を選んで破壊する。この効果の条件でモンスター（レベル１０）を墓地へ送った場合、さらに自分の墓地のモンスター（レベル４／悪魔族／攻撃力０）１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -127952,6 +128031,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -128040,7 +128120,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -128052,7 +128133,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    お互いのフィールドの攻撃表示モンスターの内、攻撃力が一番高いモンスター１体を選んで破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -128068,6 +128150,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -128095,7 +128178,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -128107,7 +128191,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの元々のレベルが６以下の表側表示モンスターを［自分フィールドの表側表示モンスター（魔法使い族）の数］まで選んで破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -128149,7 +128234,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -128161,7 +128247,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードのレベルはターン終了時まで２上がる。この効果の条件でモンスター（光属性／ギャラクシー族）が墓地へ送られた場合、さらにこのターン、モンスター（光属性／ギャラクシー族）を攻撃表示でアドバンス召喚する場合、表側表示のこのカードは２体分のリリースにできる。
   ko:
   zh-TW:
   zh-CN:
@@ -128180,6 +128267,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
