--- a/data/rush/yugipedia1029979.yaml
+++ b/data/rush/yugipedia1029979.yaml
@@ -44,7 +44,7 @@ series:
 - King's
 images:
 - index: 1
-  image: KingsGreed-RDHC01-JP-OP.png
+  image: KingsGreed-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/HC01-JP083
