--- a/data/rush/yugipedia1031945.yaml
+++ b/data/rush/yugipedia1031945.yaml
@@ -48,7 +48,7 @@ series:
 - Blue-Eyes
 images:
 - index: 1
-  image: SoulKnight-RDHC01-JP-OP.png
+  image: SoulKnight-RDHC01-JP-C.png
 sets:
   ja:
   - set_number: RD/HC01-JP077
