--- a/data/rush/yugipedia1034536.yaml
+++ b/data/rush/yugipedia1034536.yaml
@@ -34,7 +34,7 @@ def: 900
 legend: true
 images:
 - index: 1
-  image: GeminiElf-RDHC01-JP-OP.png
+  image: GeminiElf-RDHC01-JP-UR.png
 sets:
   ja:
   - set_number: RD/HC01-JP029
