--- a/data/rush/yugipedia1034595.yaml
+++ b/data/rush/yugipedia1034595.yaml
@@ -43,7 +43,7 @@ property: Normal
 legend: true
 images:
 - index: 1
-  image: HammerShot-RDHC01-JP-OP.png
+  image: HammerShot-RDHC01-JP-SR.png
 sets:
   ja:
   - set_number: RD/HC01-JP058
