--- a/rush.yaml
+++ b/rush.yaml
@@ -128511,3 +128511,209 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1035059
+---
+konami_id:
+name:
+  en: Murin Duke the Shadow Flower Wave
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>花<rt>か</rt></ruby><ruby>牙<rt>げ</rt></ruby><ruby>一<rt>いち</rt></ruby><ruby>波<rt>ば</rt></ruby>ムーリン・ドゥーク
+  ja_romaji: Kage Ichiba Mūrin Dūku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your field gains ATK equal to [the number of monsters on your field] x 500 until the end of this turn. Then, inflict 700 damage to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Plant / Fusion / Effect
+attribute: EARTH
+level: 9
+atk: 3000
+def: 2500
+materials:
+  en: |-
+    "Flower Fan Clematis" + "Lindo the Shadow Flower Warrior"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Shadow Flower
+images:
+- index: 1
+  image: MurinDuketheShadowFlowerWave-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP045
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1035130
+---
+konami_id:
+name:
+  en: Transamuvelgr Rainac
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザムヴェルグ・ライナック
+  ja_romaji: Toranzamuverugu Rainakku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 900 ATK until the end of your opponent's next turn. Then, if you sent a LIGHT Attribute or DARK Attribute monster to the Graveyard to meet the requirement, you can make all face-up monsters on your opponent's field lose 1000 ATK until the end of your opponent's next turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 3000
+def: 1600
+materials:
+  en: |-
+    "Transamu Rainac" + "Voidvelgr Requiem"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuvelgrRainac-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP040
+    set_name: Transamu of Transcendence
+    rarities:
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1035131
+---
+konami_id:
+name:
+  en: Jinzo - Returner
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send this face-up card from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Jinzo" from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: DARK
+level: 3
+atk: 600
+def: 1400
+images:
+- index: 1
+  image: JinzoReturner-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP027
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1035172
