--- a/rush.yaml
+++ b/rush.yaml
@@ -128652,6 +128652,7 @@ sets:
   - set_number: RD/KP16-JP040
     set_name: Transamu of Transcendence
     rarities:
+    - Super Rare
     - Secret Rare
 is_translation_unofficial:
   name:
@@ -128717,3 +128718,330 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1035172
+---
+konami_id:
+name:
+  en: Jinzo the Machine Menace
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If a player has a Trap Card in their Graveyard, you can Special Summon this card from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send this face-up card from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Jinzo" from your Graveyard face-up to your field. Then, you can look at all face-down cards in your opponent's Spell & Trap Zone, then return them to their original positions. If you do, destroy all Trap Cards among them.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: DARK
+level: 7
+atk: 2400
+def: 1500
+images:
+- index: 1
+  image: JinzotheMachineMenace-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP028
+    set_name: Transamu of Transcendence
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1035182
+---
+konami_id:
+name:
+  en: 'Jinzo #7.7'
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 人造人間７.７号
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 1 monster from your Graveyard on the bottom of the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card can attack directly this turn. Then, you can add 1 "Machine Inspector" or 1 "Accelerator" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: DARK
+level: 2
+atk: 700
+def: 700
+images:
+- index: 1
+  image: Jinzo77-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP026
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1035214
+---
+konami_id:
+name:
+  en: Jinzo - Amplified
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイコ・ショッカー・アンプリファイド
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Jinzo" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card cannot be destroyed by your opponent's Trap Card effects this turn. Then, you can make this card gain ATK equal to [the number of Machine Type monsters in your Graveyard] x 100 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: DARK
+level: 7
+atk: 2400
+def: 1500
+images:
+- index: 1
+  image: JinzoAmplified-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP029
+    set_name: Transamu of Transcendence
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1035215
+---
+konami_id:
+name:
+  en: Machine Inspector
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: マシン・インスペクター
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Each player excavates the top 4 cards of their Deck. You can send up to 2 excavated Machine Type monsters and/or Trap Cards to the Graveyard. Each player places their remaining cards on the bottom of their Deck in any order. Then, if you sent a Trap Card to the Graveyard by this effect, draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: MachineInspector-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP057
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1035216
+---
+konami_id:
+name:
+  en: Accelerator
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 電脳加速器
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's effect cannot be negated.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Machine Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 300 ATK. If the equipped monster's original name is "Jinzo", its Continuous Effect becomes "Your opponent cannot activate Trap Cards, and their Trap Card effects are negated".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: Accelerator-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP056
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1035217
